Upgrade actions and dependencies in build workflow
Updated GitHub Actions workflow to use latest action versions.

--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -3,27 +3,27 @@ on: [push, workflow_dispatch]
 
 jobs:
   build:
-    runs-on: windows-2019  # Usamos una máquina con Windows y SDK ya instalados
+    runs-on: windows-2019
     
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4  # Actualizado a v4
     
     # 1. Instalamos Mamba (Conda) en la nube
     - name: Setup Mambaforge
-      uses: conda-incubator/setup-miniconda@v2
+      uses: conda-incubator/setup-miniconda@v3 # Actualizado a v3
       with:
         miniforge-variant: Mambaforge
         miniforge-version: latest
         activate-environment: odm_build
         python-version: 3.9
         
-    # 2. Instalamos las librerías (Igual que hiciste tú)
+    # 2. Instalamos las librerías
     - name: Install Dependencies
       shell: bash -l {0}
       run: |
         mamba install -c conda-forge cmake ninja compilers gdal opencv pcl boost eigen -y
         
-    # 3. Compilamos (Aquí SÍ funcionará porque GitHub tiene el Windows SDK)
+    # 3. Compilamos
     - name: Compile
       shell: bash -l {0}
       run: |
@@ -32,9 +32,10 @@ jobs:
         cmake -G "Ninja" .. -DCMAKE_BUILD_TYPE=Release
         cmake --build . --config Release
         
-    # 4. Te entregamos el archivo listo
+    # 4. Te entregamos el archivo listo (CORREGIDO A v4)
     - name: Upload Artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: odm_orthophoto_exe
         path: build/odm_orthophoto.exe
+        compression-level: 0 # Sin compresión extra para que sea más rápido
