--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -6,13 +6,13 @@ jobs:
     runs-on: windows-2019
     
     steps:
-    - uses: actions/checkout@v4  # Actualizado a v4
+    - uses: actions/checkout@v4
     
-    # 1. Instalamos Mamba (Conda) en la nube
-    - name: Setup Mambaforge
-      uses: conda-incubator/setup-miniconda@v3 # Actualizado a v3
+    # 1. Instalamos Miniforge (El nuevo estándar que incluye Mamba)
+    - name: Setup Miniforge
+      uses: conda-incubator/setup-miniconda@v3
       with:
-        miniforge-variant: Mambaforge
+        miniforge-variant: Miniforge3  # <--- CAMBIO AQUÍ (Antes era Mambaforge)
         miniforge-version: latest
         activate-environment: odm_build
         python-version: 3.9
@@ -32,10 +32,10 @@ jobs:
         cmake -G "Ninja" .. -DCMAKE_BUILD_TYPE=Release
         cmake --build . --config Release
         
-    # 4. Te entregamos el archivo listo (CORREGIDO A v4)
+    # 4. Te entregamos el archivo listo
     - name: Upload Artifact
       uses: actions/upload-artifact@v4
       with:
         name: odm_orthophoto_exe
         path: build/odm_orthophoto.exe
-        compression-level: 0 # Sin compresión extra para que sea más rápido
+        compression-level: 0
