--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -23,28 +23,22 @@ jobs:
       run: |
         mamba install -c conda-forge cmake ninja gdal opencv pcl boost eigen -y
         
-    # 3. Compilamos con Búsqueda Dinámica
+    # 3. Compilamos (Con cirugía previa)
     - name: Compile
       shell: bash -l {0}
       run: |
-        echo "Buscando PCLConfig.cmake..."
-        # Buscamos el archivo y guardamos su carpeta en una variable
-        PCL_CONFIG_PATH=$(find "$CONDA_PREFIX" -name PCLConfig.cmake | head -n 1)
-        PCL_DIR_FOUND=$(dirname "$PCL_CONFIG_PATH")
-        echo "¡PCL encontrado en: $PCL_DIR_FOUND!"
-
-        echo "Buscando OpenCVConfig.cmake..."
-        OPENCV_CONFIG_PATH=$(find "$CONDA_PREFIX" -name OpenCVConfig.cmake | head -n 1)
-        OPENCV_DIR_FOUND=$(dirname "$OPENCV_CONFIG_PATH")
-        echo "¡OpenCV encontrado en: $OPENCV_DIR_FOUND!"
-
+        # --- PASO 1: CIRUGÍA DEL CÓDIGO ---
+        # El código original pide PCL 1.8. Nosotros tenemos una versión nueva.
+        # Usamos 'sed' para borrar el "1.8" del archivo CMakeLists.txt y que acepte la nuestra.
+        sed -i 's/find_package(PCL 1.8 REQUIRED/find_package(PCL REQUIRED/g' CMakeLists.txt
+        
+        # --- PASO 2: COMPILACIÓN ---
         mkdir build
         cd build
         
-        # Le pasamos las rutas exactas a CMake para que no se pierda
+        # Apuntamos directamente a la carpeta 'Library' de Conda donde están los archivos en Windows
+        # Y usamos Visual Studio 2019
         cmake .. -G "Visual Studio 16 2019" -A x64 \
-          -DPCL_DIR="$PCL_DIR_FOUND" \
-          -DOpenCV_DIR="$OPENCV_DIR_FOUND" \
           -DCMAKE_PREFIX_PATH="$CONDA_PREFIX/Library" \
           -DCMAKE_BUILD_TYPE=Release
         
